<resources>
    <string name="app_name"> PamiranIndustries App</string>
    <string name="button">Send the Request</string>
    <string name="editTextTextEmailAddress">Your Email</string>
    <string name="editTextTextPersonName">Your name</string>
    <string name="textview1">Enter Your Email and Password</string>
    <string name="textview2">Select the Request Type</string>
    <string name="textview3">All Movies:</string>
    <string name="textview4">Please enter your request here.</string>
    <string name="inbox">customer inbox</string>
    <string name="imageView2">Logo</string>
    <string name="imageView3">Inbox</string>
    <string name="button7">Send</string>
    <string name="textview5">Visit us at:</string>
    <string name="textview6">www.pamiranindustries.com</string>
    <string name="activity_movies">Movies</string>
    <string name="activity_main">Pamiran</string>
    <string name="moviesDetails">Movie Details</string>
    <string name="cameras">Cameras</string>
    <string name="SeattleCameras">Seattle Traffic Cameras</string>
    <string name="Warning">Below ListView is populated from JSON Data</string>
    <string name="wifi_connection">The active connection is wifi</string>
    <string name="mobile_connection">The active connection is mobile.</string>
    <string name="no_wifi_or_mobile">No wireless or mobile connection.</string>
    <string name="TrafficMap">Traffic Camera Map</string>
    <string name="locations">Locations:</string>
    <string name="login">Login</string>
    <string name="your_password">Your password</string>
    <string name="signUp">Don\'t have an account yet? SignUp HERE!</string>
    <string name="SignUp">SignUp</string>
    <string name="Welcome">Welcome</string>
    <string name="Welcome2">Welcome, Now go to the main page and sign in!</string>
    <string name="your_username">Your Username</string>
    <string name="Profile">Profile</string>
    <string name="Fire">Firebase</string>
    <string name="below_listview_is_populated_from_firebase">Below ListView is populated from firebase</string>
    <string name="save1">Turn on to save the information</string>
    <string name="remember_me">Remember Me</string>
    <string name="username">UserName :</string>
    <string name="arya">Arya</string>
    <string name="payam">Payam</string>
    <string name="photoSend">Send Photo</string>
    <string name="send_photo">Send Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="picHere">your pic here</string>

</resources>